pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  namespace: default
spec:
  containers:
    - name: pod1-container
      image: httpd:2.4.41-alpine
      ports:
        - containerPort: 80
  tolerations:
    - key: node-role.kubernetes.io/control-plane
      operator: "Exists"
      effect: "NoSchedule"
    - key: node-role.kubernetes.io/master
      operator: "Exists"
      effect: "NoSchedule"
