networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np-wp-virt
  namespace: virtualizacao
spec:
  policyTypes:
  - Ingress
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: wp-virt
    ports:
    - protocol: TCP
      port: 3306
